# merge-files

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
merge-files/: README.md  pyproject.toml
merge-files/src/merge_files/: main.py  stage.py
merge-files/src/merge_files/format/: __init__.py  text.py
merge-files/src/merge_files/format/file/: __init__.py  binary.py  stdio.py  text.py
merge-files/src/merge_files/format/parameter/: eval.py  range.py
merge-files/src/merge_files/formats/: binary.py  file.py  format.py  text.py
merge-files/src/merge_files/mergable/: binary.py  file.py  mergable.py  method.py  text.py
merge-files/src/merge_files/merge/: args.py  merge_method.py  merger.py  option.py  options.py  registry.py  stage.py  support.py
merge-files/src/merge_files/mergeable_types/: binary.py  file.py  mergeable.py  text.py
merge-files/src/merge_files/utils/: code.py  discovery.py  docs.py  enum.py  logging.py  text.py  types.py
merge-files/tests/merge_files/: conftest.py  test_concatenate.py  test_env.py  test_env_merger.py  test_main.py  test_merger.py
merge-files/tests/merge_files/args/: test_parse_args.py
merge-files/tests/merge_files/merge/: test_merge_method.py
merge-files/tests/merge_files/mergeable_types/: test_env.py  test_get.py
merge-files/tests/merge_files/merger/: test_merger.py
merge-files/tests/merge_files/mergers/: test_concatenate.py  test_env.py  test_get.py
merge-files/tests/merge_files/stage/: test_parse_args.py
merge-files/tests/merge_files/utils/: test_subclasses.py
(+31 files in other folders)
