[project]
name = "merge_files"
description = "Merge files together"
version = "0.1.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
dependencies = [
    "chardet"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "coverage"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
