[project]
name = "merge_files"
description = "Convert and merge arbitrary files together"
version = "0.2.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain", # OSI: nuck my suts; WTFPL
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


dependencies = [
    "arranges>=0.1",
    "chardet==5.2.*",
    "pydantic==2.3.*",
    "simpleeval==0.9.*"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "coverage",
    "build",
    "twine"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


[project.urls]
"Homepage" = "https://github.com/bitplane/merge-files"
"Bug Tracker" = "https://github.com/bitplane/merge-files/issues"


[project.scripts]
merge-files = "merge_files.main:main"
